# ChangeLog for app-admin/gamin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/gamin/ChangeLog,v 1.83 2008/05/29 15:28:59 hawking Exp $

  29 May 2008; Ali Polatel <hawking@gentoo.org> gamin-0.1.9-r1.ebuild:
  python_mod_optimize is ROOT aware.

  05 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> gamin-0.1.9-r1.ebuild:
  fix python eclass use, fix bug #212830 (again)

*gamin-0.1.9-r1 (05 Apr 2008)

  05 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gamin-0.1.9-r1.ebuild:
  make python bindings optional, fix bug #212830

  06 Nov 2007; Mart Raudsepp <leio@gentoo.org> -gamin-0.1.7.ebuild,
  -gamin-0.1.8.ebuild:
  Remove old CPU wakeup happy versions

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org> gamin-0.1.9.ebuild:
  sparc stable wrt #193339

  03 Oct 2007; Tom Gall <tgall@gentoo.org> gamin-0.1.9.ebuild:
  stable on ppc64

  27 Sep 2007; Raúl Porcel <armin76@gentoo.org> gamin-0.1.9.ebuild:
  alpha/ia64 stable wrt #193339

  26 Sep 2007; Joshua Kinard <kumba@gentoo.org> gamin-0.1.9.ebuild:
  Stable on mips, per #193339.

  25 Sep 2007; Jeroen Roovers <jer@gentoo.org> gamin-0.1.9.ebuild:
  Stable for HPPA (bug #193339).

  22 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org> gamin-0.1.9.ebuild:
  ppc stable, bug #193339

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> gamin-0.1.9.ebuild:
  Stable on amd64 wrt bug #193339.

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> gamin-0.1.9.ebuild:
  Stable on x86 wrt bug #193339.

  14 Sep 2007; Roy Marples <uberlord@gentoo.org> gamin-0.1.9.ebuild:
  elibtoolize how patches install-sh for us.

  20 Aug 2007; Daniel Gryniewicz <dang@gentoo.org>
  +files/gamin-0.1.9-compile-warnings.patch, gamin-0.1.9.ebuild:
  Fix compile warnings; bug #188923

  07 Aug 2007; Roy Marples <uberlord@gentoo.org>
  +files/gamin-0.1.9-freebsd.patch, gamin-0.1.9.ebuild:
  Redo the FreeBSD patch for 1.9 - seems we do need it still
